add patchMe
fix swagger yml
